welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:41: error: value Blue is not a member of object java.awt.Color
  fleur(Color.Blue);
              ^